project/out
msp430-elf-gcc -mmcu=msp430g2553 -I./h   -c -o wdInterruptHandler.o wdInterruptHandler.c
wdInterruptHandler.c: In function 'switch_interrupt_handler':
wdInterruptHandler.c:12:21: error: 'SWITCHES' undeclared (first use in this function)
   P1IES |= (p1val & SWITCHES); /* if switch up, sense down */
                     ^~~~~~~~
wdInterruptHandler.c:12:21: note: each undeclared identifier is reported only once for each function it appears in
wdInterruptHandler.c:15:15: error: 'SW1' undeclared (first use in this function)
   if (p1val & SW1) {  /* button up */
               ^~~
wdInterruptHandler.c:16:15: error: 'LED_GREEN' undeclared (first use in this function)
     P1OUT &= ~LED_GREEN;
               ^~~~~~~~~
wdInterruptHandler.c: In function 'Port_1':
wdInterruptHandler.c:25:15: error: 'SWITCHES' undeclared (first use in this function)
   if (P1IFG & SWITCHES) {       /* did a button cause this interrupt? */
               ^~~~~~~~
wdInterruptHandler.c: In function 'WDT':
wdInterruptHandler.c:38:14: error: 'LED_RED' undeclared (first use in this function)
     P1OUT |= LED_RED;
              ^~~~~~~
make: *** [<builtin>: wdInterruptHandler.o] Error 1
